tests/baselines/reference/dynamicImportDeferMissingModuleESNext.errors.txt
b.ts(1,1): error TS18060: Deferred imports are only supported when the '--module' flag is set to 'esnext'.
b.ts(1,14): error TS2792: Cannot find module 'a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== b.ts (2 errors) ====
    import.defer("a").then(ns => {
    ~~~~~~~~~~~~~~~~~
!!! error TS18060: Deferred imports are only supported when the '--module' flag is set to 'esnext'.
                 ~~~
!!! error TS2792: Cannot find module 'a'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
      ns.foo();
    });
    